[gd_scene load_steps=2 format=3 uid="uid://bcyhnq0khuo26"]

[ext_resource type="Script" path="res://SQLController.gd" id="1_038gw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_038gw")

[node name="Create" type="Button" parent="."]
layout_mode = 0
offset_left = 122.0
offset_top = 40.0
offset_right = 292.0
offset_bottom = 104.0
text = "Create"

[node name="Insert" type="Button" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 136.0
offset_right = 292.0
offset_bottom = 201.0
text = "Insert"

[node name="Update" type="Button" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 238.0
offset_right = 292.0
offset_bottom = 303.0
text = "Update"

[node name="Select" type="Button" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 350.0
offset_right = 291.0
offset_bottom = 415.0
text = "Select"

[node name="Delete" type="Button" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 455.0
offset_right = 290.0
offset_bottom = 520.0
text = "Delete"

[node name="Add" type="Button" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 557.0
offset_right = 292.0
offset_bottom = 618.0
text = "Add"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 119.0
offset_right = 511.0
offset_bottom = 164.0
text = "Item"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 403.0
offset_top = 191.0
offset_right = 506.0
offset_bottom = 233.0
text = "Jumlah"

[node name="item" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 475.0
offset_top = 110.0
offset_right = 641.0
offset_bottom = 154.0

[node name="jumlah" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 477.0
offset_top = 179.0
offset_right = 643.0
offset_bottom = 223.0

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 610.0
offset_top = 549.0
offset_right = 788.0
offset_bottom = 619.0
text = "Save"

[node name="Load" type="Button" parent="."]
offset_left = 888.0
offset_top = 546.0
offset_right = 1066.0
offset_bottom = 616.0
text = "Load"

[connection signal="button_down" from="Create" to="." method="_on_create_button_down"]
[connection signal="button_down" from="Insert" to="." method="_on_insert_button_down"]
[connection signal="button_down" from="Update" to="." method="_on_update_button_down"]
[connection signal="button_down" from="Select" to="." method="_on_select_button_down"]
[connection signal="button_down" from="Delete" to="." method="_on_delete_button_down"]
[connection signal="button_down" from="Add" to="." method="_on_add_button_down"]
[connection signal="button_down" from="Save" to="." method="_on_save_button_down"]
[connection signal="button_down" from="Load" to="." method="_on_load_button_down"]
